2022-09-13T00:37:01Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3041552375
* notice: last 14d: unq all: 7 30
* notice: prev accum: outdated-unq outdated-all / unq all: 121 608 / 127 637
* notice: next accum: outdated-unq outdated-all / unq all: 121 608 / 128 638
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-12]

2022-09-08T16:07:42Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3016585442
* notice: last 14d: unq all: 6 29
* notice: prev accum: outdated-unq outdated-all / unq all: 121 608 / 125 612
* notice: next accum: outdated-unq outdated-all / unq all: 121 608 / 127 637
* notice: prev exec diff / last date diff / accum: unq all: +2 +25 -0 -0 / +2 +25 -0 -0 / 2 25
* notice: removed / changed dates: [] / [2022-09-08]

2022-09-05T08:08:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2991668617
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 121 608 / 124 611
* notice: next accum: outdated-unq outdated-all / unq all: 121 608 / 125 612
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-05]

2022-09-03T16:06:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2984999627
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 120 607 / 124 611
* notice: next accum: outdated-unq outdated-all / unq all: 121 608 / 124 611
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-20] / []

2022-09-02T08:08:00Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2977559149
* notice: last 14d: unq all: 4 4