@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T00:43:15Z",
-  "count" : 2,
+  "timestamp" : "2022-09-13T08:10:36Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
