@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-09-13T00:37:01Z",
+  "timestamp" : "2022-09-13T08:10:36Z",
   "count_outdated" : 608,
   "uniques_outdated" : 121,
-  "count" : 638,
-  "uniques" : 128,
+  "count" : 637,
+  "uniques" : 127,
   "views" : [
     {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
