@@ -1,11 +1,11 @@
 {
-  "count": 30,
-  "uniques": 7,
+  "count": 29,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-02T00:00:00Z",
