@@ -1,3 +1,11 @@
+2022-09-13T08:10:36Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3043392723
+* notice: last 14d: unq all: 6 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 121 608 / 128 638
+* notice: next accum: outdated-unq outdated-all / unq all: 121 608 / 127 637
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-08-30]
+
 2022-09-13T00:37:01Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3041552375
 * notice: last 14d: unq all: 7 30
